Mejorar .gitignore para proteger archivos sensibles

--- a/.gitignore
+++ b/.gitignore
@@ -10,5 +10,8 @@ wheels/
 .venv
 .env
 
-#Archivos 
-credentials*.json
+# Archivos sensibles
+credentials/
+*.json
+!*template*.json
+!pyproject.toml
